Make use transparent for existing Elixir app

--- a/transport-db/docker-compose.yml
+++ b/transport-db/docker-compose.yml
@@ -3,15 +3,13 @@
 services:
 
   db:
-    image: test:postgres
-    # expose on host port 6432
+    image: local:transport-db
     ports:
-      - "6432:5432"
+      - "5432:5432"
     shm_size: 128mb
     environment:
-      POSTGRES_USER: transport_docker
-      POSTGRES_PASSWORD: coucou
-      # TODO: add test db https://github.com/mrts/docker-postgresql-multiple-databases
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: transport_repo
     # NOTE: we're using a opaque native Docker volume
     # instead of a host machine bind mount, for performance reasons
